--- a/stucampus/templates/account/profile.html
+++ b/stucampus/templates/account/profile.html
@@ -1,26 +1,56 @@
 {% extends 'account/base.html' %}
+
     {% block inside %}
+
         <div class="infor">
-            <h4>{{ user.student.screen_name }}的个人资料</h4>
-                <div>
-                    <ul>
-                        {% load account_custom %}
-                        <li>真实姓名：{{ user.student.true_name | default:'暂无' }}</li>
-                        <li>学院：{{ user.student | get_college_name }}</li>
-                        <li>昵称：{{ user.student.screen_name | default:'暂无' }}</li>
-                        <li>性别：{{ user.student.get_gender_display }}</li>
-                        <li>邮箱：{{ user.email | default:'暂无' }}</li>
-                        <li>学号：{{ user.student.job_id | default:'暂无' }}</li>
-                        {% if user.student.birthday %}
-                        <li>生日：{{ user.student.birthday | date:'Y-m-d' }}</li>
-                        {% else %}
-                        <li>生日：暂无</li>
-                        {% endif %}
-                        <li>手机长号：{{ user.student.mobile_phone_number | default:'暂无' }}</li>
-                        <li>手机短号：{{ user.student.internal_phone_number | default:'暂无' }}</li>
-                        <li>校园卡号：{{ user.student.card_id | default:'暂无' }}</li>
-                        <li>加入日期：{{ user.date_joined | date:'Y-m-d' }}</li>
-                    </ul>
-                </div>
+
+            <div class="info-head">
+
+                <h4>个人资料</h4>
+
+                <a href="/account/profile/edit" id="infochange-btn"><img src="/static/images/account/change-infor.png" alt="修改" /><span>修改</span></a>
+
+            </div>
+            <div>
+
+                <ul>
+
+                    {% load account_custom %}
+
+                    <li>真实姓名：{{ user.student.true_name | default:'暂无' }}</li>
+
+                    <li>学院：{{ user.student | get_college_name }}</li>
+
+                    <li>昵称：{{ user.student.screen_name | default:'暂无' }}</li>
+
+                    <li>性别：{{ user.student.get_gender_display }}</li>
+
+                    <li>邮箱：{{ user.email | default:'暂无' }}</li>
+
+                    <li>学号：{{ user.student.job_id | default:'暂无' }}</li>
+
+                    {% if user.student.birthday %}
+
+                    <li>生日：{{ user.student.birthday | date:'Y-m-d' }}</li>
+
+                    {% else %}
+
+                    <li>生日：暂无</li>
+
+                    {% endif %}
+
+                    <li>手机长号：{{ user.student.mobile_phone_number | default:'暂无' }}</li>
+
+                    <li>手机短号：{{ user.student.internal_phone_number | default:'暂无' }}</li>
+
+                    <li>校园卡号：{{ user.student.card_id | default:'暂无' }}</li>
+
+                    <li>加入日期：{{ user.date_joined | date:'Y-m-d' }}</li>
+
+                </ul>
+
+            </div>
+
         </div>
+
     {% endblock %}
