--- a/stucampus/templates/account/base.html
+++ b/stucampus/templates/account/base.html
@@ -72,7 +72,7 @@
 
             </ul>
             <div class="space"></div>
-            <a href="/account/profile/edit" id="infochange-btn"><img src="/static/images/account/change-infor.png" alt="修改资料" /><span>修改资料</span></a>
+            <a href="/account/profile/edit" id="infochange-btn"><span>修改资料</span></a>
 
         </div>
 
