--- a/stucampus/templates/account/profile.html
+++ b/stucampus/templates/account/profile.html
@@ -8,7 +8,7 @@
 
                 <h4>个人资料</h4>
 
-                <a href="/account/profile/edit" id="infochange-btn"><img src="/static/images/account/change-infor.png" alt="修改" /><span>修改</span></a>
+                <a href="/account/profile/edit"><img src="/static/images/account/change-infor.png" alt="修改" /><span>修改</span></a>
 
             </div>
             <div>
