fixed the template url error

--- a/stucampus/templates/gobye/login.html
+++ b/stucampus/templates/gobye/login.html
@@ -40,7 +40,7 @@
                             <p class="error-hint"></p>
                         </div>
                         <div class="row">
-                            <a href="/gobye/feedback" style="display: inline-block;color: white;">反馈</a>
+                            <a href="/gobye/feedback/" style="display: inline-block;color: white;">反馈</a>
                         </div>
                         
                     </form>
