--- a/stucampus/templates/gobye/result.html
+++ b/stucampus/templates/gobye/result.html
@@ -20,7 +20,7 @@
     </script>
     <div class="dialog">
         <h1>你还差 <strong id="totalNeed"></strong> 个 学分</h1>
-        <p><a href="/gobye/feedback" style="display: inline-block;color: red;font-size: 18px">反馈</a></p>
+        <p><a href="/gobye/feedback/" style="display: inline-block;color: red;font-size: 18px">反馈</a></p>
         <br>
         <p><a href="javascript:void(0)" onclick="reset()">重置</a></p>
     </div>
