--- a/stucampus/templates/gobye/feedback.html
+++ b/stucampus/templates/gobye/feedback.html
@@ -5,8 +5,8 @@
 	<title>反馈</title>
 	<style>
 		body {
-			background: -webkit-linear-gradient(left, #25c481, #25b7c4);
-			background: linear-gradient(to right, #25c481, #25b7c4);
+			background: -webkit-linear-gradient(left, #15b471, #15a7b4);
+			background: linear-gradient(to right, #15b471, #15a7b4);
 		}
 		.container {
 		 	text-align: center;
