--- a/stucampus/templates/gobye/feedbackInfo.html
+++ b/stucampus/templates/gobye/feedbackInfo.html
@@ -1,4 +1,4 @@
 <script type="text/javascript">
 	alert("反馈成功！");
-	window.location.href="http://172.29.45.124:8000/"; 
+	window.location.href="{% url 'gobye:login' %}"; 
 </script>
